--- a/frontend/src/components/Home.module.css
+++ b/frontend/src/components/Home.module.css
@@ -1,3 +1,6 @@
-.text {
-    color: red;
+.btnContainer{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
